<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/login_background"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-4dp" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_GL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_GL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_GL6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <TextView
        android:id="@+id/count_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:gravity="right"
        android:text="@string/login_username"
        android:textSize="12sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/vertical_GL1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL1"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL2"
        app:layout_constraintEnd_toStartOf="@+id/count_ET"
        app:layout_constraintHorizontal_bias="0.6">
    </TextView>


    <EditText
        android:id="@+id/count_ET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:hint="@string/login_username_hint"
        android:background="@drawable/common_input_shape"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_GL2"
        app:layout_constraintEnd_toStartOf="@+id/vertical_GL2"
        app:layout_constraintStart_toEndOf="@+id/count_TV"
        app:layout_constraintTop_toBottomOf="@id/horizontal_GL1"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp" />

    <TextView
        android:id="@+id/password_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        android:text="@string/login_password"
        android:gravity="right"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/vertical_GL1"
        app:layout_constraintRight_toLeftOf="@+id/password_ET"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL3"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:background="@drawable/common_input_shape"
        android:hint="@string/login_password_hint"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@+id/password_TV"
        app:layout_constraintRight_toRightOf="@+id/vertical_GL2"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL3"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />


    <CheckBox
        android:id="@+id/save_count_CB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL4"
        app:layout_constraintStart_toStartOf="@+id/vertical_GL1"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL3"
        android:layout_marginTop="8dp"
        android:text="@string/login_remeber_password"
        app:layout_constraintEnd_toStartOf="@+id/vertical_GL2"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/login_BTN"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="W,3:8"
        android:background="@drawable/login_btn_selector"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL5"
        app:layout_constraintEnd_toStartOf="@+id/vertical_GL2"
        app:layout_constraintStart_toStartOf="@+id/vertical_GL1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL4" />


    <TextView
        android:id="@+id/login_hint_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_support_info"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_GL6"
        app:layout_constraintEnd_toStartOf="@+id/vertical_GL2"
        app:layout_constraintStart_toStartOf="@+id/vertical_GL1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_GL5" />
</android.support.constraint.ConstraintLayout>